# calen7drier

./: .env.example  .gitignore  Dockerfile  README.md  k8s  push.fish  pyproject.toml
.ortfo/: description.md
Calendrier_N7/: main.html  style.css
ade-bash-client/: ADE_list_projects.sh  ADE_search.sh  ADE_uid_search.sh  cas-get.sh  get_calendar_name.sh  main.sh  main_basic_search.sh  main_list_projects.sh  search_and_metadata.sh
ade_feed_url/: .gitignore  env.py  main.py  parse_feed.py  server.py
ade_feed_url/assets/: style.css
ade_feed_url/templates/: index.html  index.html.j2  new_index.html
