[tool.poetry]
name = "ade-event-feed-url-scraper"
version = "0.1.0"
description = ""
authors = ["Ewen Le Bihan <hey@ewen.works>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
helium = "^3.2.6"
beautifulsoup4 = "^4.12.2"
docopt = "^0.6.2"
ics = "^0.7.2"
pytz = "^2023.3.post1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[tool.poetry.scripts]
ade-feed-url = "ade_feed_url.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

