[tool.poetry]
name = "ade-feed-url-scraper"
version = "0.1.0"
description = ""
authors = ["Ewen Le Bihan <hey@ewen.works>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
helium = "^3.2.6"
beautifulsoup4 = "^4.12.2"
docopt = "^0.6.2"
ics = "^0.7.2"
pytz = "^2023.3.post1"
flask = "^3.0.0"
rich = "^13.6.0"
filelock = "^3.12.4"
uwsgi = "^2.0.22"
pyvirtualdisplay = "^3.0"
typed-dotenv = {extras = ["pydantic"], version = "^2.0.0"}
nanoid = "^2.0.0"

[tool.poetry.scripts]
ade-feed-url = "ade_feed_url.main:run"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
